alignment issue fixed

--- a/src/app/usa-map/usa-map.component.scss
+++ b/src/app/usa-map/usa-map.component.scss
@@ -19,7 +19,7 @@ margin-bottom: 32px;
     svg {
       width: 100%;
       height: auto;
-      max-width: 90%;
+      max-width: 100%;
 
       path {
         fill: var(--color-map-background);
