--- a/src/global.scss
+++ b/src/global.scss
@@ -735,3 +735,6 @@ ion-card {
     }
   }
 }
+.backtomap-button{
+  margin-top: -14px;
+}
